--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -1,3 +1,4 @@
 {
-  "restructuredtext.confPath": "${workspaceFolder}/build/html/_static"
+  "restructuredtext.confPath": "${workspaceFolder}/build/html/_static",
+  "esbonio.sphinx.confDir": "${workspaceFolder}/build/html/_static"
 }
