Added Inkplate5V2 picture

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -1,4 +1,4 @@
 {
   "restructuredtext.confPath": "${workspaceFolder}/build/html/_static",
-  "esbonio.sphinx.confDir": "${workspaceFolder}/build/html/_static"
+  "esbonio.sphinx.confDir": "${workspaceFolder}\\build\\html\\_static"
 }
